Some more CSS tweaks. Refactored Lightbox as components

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
       crossorigin="anonymous"
     />
     <link
-      href="https://fonts.googleapis.com/css?family=Overpass:400,700&amp;subset=latin-ext"
+      href="https://fonts.googleapis.com/css?family=Roboto:400,500"
       rel="stylesheet"
     />
     <!--
