--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
       crossorigin="anonymous"
     />
     <link
-      href="https://fonts.googleapis.com/css?family=Roboto:400,500"
+      href="https://fonts.googleapis.com/css?family=Rubik:400,500"
       rel="stylesheet"
     />
     <!--
